--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,10 +17,10 @@ install:
 - ps: |
     if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
     $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
-    pip install --disable-pip-version-check --user --upgrade pip setuptools wheel pybind11
+    pip install --disable-pip-version-check --user --upgrade pip setuptools wheel pybind11 cibuildwheel
 build_script:
 - ps: |
-    pip wheel --no-deps --verbose -w wheelhouse .
+    cibuildwheel
 artifacts:
   - path: "wheelhouse/*.whl"
     name: Wheels
