--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,15 +12,15 @@ environment:
   - PYTHON: 34
   - PYTHON: 35
   - PYTHON: 36
-install:
-- cmd: '"%VS140COMNTOOLS%\..\..\VC\vcvarsall.bat" %PLATFORM%'
+#install:
+# - cmd: '"%VS140COMNTOOLS%\..\..\VC\vcvarsall.bat" %PLATFORM%'
 - ps: |
-    if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
-    $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
+    # if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
+    # $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
     pip install --disable-pip-version-check --user --upgrade pip setuptools wheel pybind11 cibuildwheel
 build_script:
 - ps: |
-    cibuildwheel
+    cibuildwheel --output-dir wheelhouse
 artifacts:
   - path: "wheelhouse/*.whl"
     name: Wheels
